# mtorrent-gui

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  tauri.conf.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
icons/: icon.icns
src/: lib.rs  listener.rs  logging.rs  main.rs
ui/: index.html  main.js  styles.css
ui/assets/: mtorrent.desktop
