[package]
name = "mtorrent-gui"
version = "0.1.0"
description = "Simple GUI for mtorrent"
edition = "2024"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
repository = "https://github.com/DanglingPointer/mtorrent"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mtorrent_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mtorrent-utils = { git = "https://github.com/DanglingPointer/mtorrent/", branch = "master" }
mtorrent-dht = { git = "https://github.com/DanglingPointer/mtorrent/", branch = "master" }
mtorrent = { git = "https://github.com/DanglingPointer/mtorrent/", branch = "master" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1.0.221", features = [] }
serde_json = "1.0.145"
tokio = { version = "1.45.1", features = ["rt"] }
log = "0.4.27"
simple_logger = "5.0.0"
futures-util = { version = "0.3", default-features = false }
