[package]
name = "mtorrent-gui"
version = "0.1.2"
description = "Cross-platform GUI for mtorrent"
edition = "2024"
authors = ["Mikhail Vasilyev <mikail.vasilyev@gmail.com>"]
repository = "https://github.com/DanglingPointer/mtorrent-gui"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mtorrent_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mtorrent-utils = { git = "https://github.com/DanglingPointer/mtorrent/", branch = "master" }
mtorrent-dht = { git = "https://github.com/DanglingPointer/mtorrent/", branch = "master" }
mtorrent = { git = "https://github.com/DanglingPointer/mtorrent/", branch = "master" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"

dirs-next = "2.0.0"
serde = { version = "1.0.228", features = [] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["rt"] }
log = "0.4.27"
env_logger = "0.11.8"
file-rotate = "0.8.0"
parking_lot = "0.12.4"
